# RAG

./: .env  .gitignore  RAG.ipynb  langchain_ess.ipynb  new.ipynb  pyproject.toml  requirements.txt
data/structured_files/: company.csv  company.xlsx  company2.xlsx
data/text_files/: p_intro.txt
docs/: genai.docx  temp.txt
faiss_index/: index.faiss  index.pkl
